# junia-2024

./: .gitignore  CMakeLists.txt
src/walle-app/: main.cpp
src/walle-lib/: Environnement.cpp  Environnement.hpp  Robot_Arroseur.cpp  Robot_Arroseur.hpp  Robot_Creuseur.cpp  Robot_Creuseur.hpp  Robot_Planteur.cpp  Robot_Planteur.hpp  Robot_Reboucheur.cpp  Robot_Reboucheur.hpp  element.cpp  element.hpp  environment.cpp  environment.hpp  environnement.cpp  environnement.hpp  map_environnement.cpp  map_environnement.hpp  obstacle.cpp  obstacle.hpp  planting_robot.cpp  planting_robot.hpp  robot.cpp  robot.hpp  tree.hpp  vector2.hpp
tests/: CMakeLists.txt
tests/src/: test_element.cpp  test_environment.cpp  test_environnement.cpp  test_environnement.h  test_planting_robot.cpp  test_robot.cpp
